[gd_scene load_steps=5 format=3 uid="uid://dstbblc0saya4"]

[ext_resource type="Script" path="res://ui/pause_screen.gd" id="1_47p7y"]
[ext_resource type="LabelSettings" uid="uid://b74op5dy1o5sk" path="res://ui/title_label.tres" id="2_dml1h"]
[ext_resource type="FontFile" uid="uid://denucdxyy81jm" path="res://ui/fonts/Yes Free.otf" id="3_kugih"]

[sub_resource type="LabelSettings" id="LabelSettings_h2m1p"]
font = ExtResource("3_kugih")
font_size = 60
outline_size = 10
outline_color = Color(0, 0, 0, 1)

[node name="PauseScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_47p7y")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -58.0
offset_top = -60.0
offset_right = 58.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "<Turdie's Duties>"
label_settings = ExtResource("2_dml1h")
horizontal_alignment = 1

[node name="PausedLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Paused"
label_settings = SubResource("LabelSettings_h2m1p")
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Restart"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Exit to Title"

[connection signal="button_up" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_button_up"]
[connection signal="button_up" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_button_up"]
[connection signal="button_up" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_button_up"]
